fixing connect page bug, and allignment on mobile offerings modals

--- a/client/src/components/OfferingsModal/style.css
+++ b/client/src/components/OfferingsModal/style.css
@@ -154,13 +154,14 @@
     }
     .exit-btn {
         top:15%;
+        right:15%;
     }
 }
 
 /* Iphone 6/7/8 */
 @media (max-width:375px) {
     .modal-box .off-image {
-        width: 35%;
+        width: 25%;
     }
 
     .modal-box h1 {
